# fetch_assessment

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
fetch_receipt_predictor/: app.py  inference.py  model.py
notebooks/: intial_exploration.ipynb
