[tool.poetry]
name = "fetch-receipt-predictor"
version = "0.0.1"
description = "Fetch Scanned Receipts Predictor"
authors = ["batra98 <batragaurav2616@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
torch = "^2.5.0"
scikit-learn = "^1.5.2"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
